# irsim

./: .gitignore  .project  Makefile  Makefile.am  Makefile.in  arena.cpp  arena.h  config.h  config.status  configure  configure.ac  epuck.cpp  experiment.cpp  geometry.cpp  irsim  main.cpp  random.h  simobject.cpp
.deps/: actuator.Po  arena.Po  arguments.Po  controller.Po  epuck.Po  experiment.Po  fitnessfunction.Po  general.Po  geometry.Po  individual.Po  main.Po  population.Po  puck.Po  random.Po  render.Po  sensor.Po  simmath.Po  simobject.Po  simulator.Po
actuators/: Makefile  Makefile.am  Makefile.in
actuators/.deps/: projectionactuator.Po  testwheel.Po  wheelsactuator.Po
arenas/: Makefile  Makefile.am  Makefile.in
arenas/.deps/: programmedarena.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
collisions/: Makefile  Makefile.am  Makefile.in  collisionhandler.cpp  collisionmanager.cpp
collisions/.deps/: axisalignedboundingbox.Po  circlecollisionobject.Po  collisionepuck.Po  collisionepuckgripper.Po  collisionepucksimple.Po  collisionhandler.Po  collisionmanager.Po  collisionobject.Po  collisionpuck.Po  compoundcollisionobject.Po  rectanglecollisionobject.Po  ringcollisionobject.Po
controllers/: Makefile  Makefile.am  Makefile.in  braitenbergvehicle2controller.cpp  iri1controller.cpp  iri1controller.h  subsumptiongarbagecontroller.cpp  subsumptiongarbagecontroller.h  subsumptionlightcontroller.h  testcompasscontroller.cpp  testcompasscontroller.h  testencodercontroller.cpp  tetcompasscontroller.cpp
controllers/.deps/: braitenbergvehicle2controller.Po  (+23 more)
experiments/: Makefile  Makefile.am  Makefile.in  braitenbergvehicle2experiment.cpp  ctrnnexp.cpp  iri1exp.cpp  iri1exp.h  iri2exp.cpp  iri3exp.cpp  subsumptiongarbageexp.cpp  subsumptiongarbageexp.h  testbatteryexp.cpp  testbluelightexp.cpp  testcomexp.cpp  testcompassexp.cpp  testcontactexp.cpp  testencoderexp.cpp  testevoexp.cpp  testgroundexp.cpp  testlightexp.cpp  testneuronexp.cpp  testproxexp.cpp  testredlightexp.cpp  testswitchlightexp.cpp  testwheelsexp.cpp
fitnessfunctions/: Makefile  Makefile.am  Makefile.in  loadfitnessfunction.cpp
objects/: Makefile  Makefile.am  Makefile.in  bluelightobject.cpp  groundarea.cpp  groundarea.h  redlightobject.cpp
outputFiles/: GRAPH - 0.0 RANDOM PROB.fig  GRAPH - 0.5 RANDOM PROB.fig  Plotter.m  Plotter.m~  PlotterSimplified.m  randomMovementOutput  randomMovementOutputFinal  robotPosition
paramFiles/: hibrid1Param.txt  randomTestsParam.txt  templateV2.txt
populations/: Makefile  Makefile.am  Makefile.in  standardgapopulation.cpp
renders/: Makefile  Makefile.am  Makefile.in  simpledrawstuffrender.cpp
sensors/: Makefile  Makefile.am  Makefile.in  batterysensor.cpp  bluebatterysensor.cpp  encodersensor.cpp  epuckproximitysensor.cpp  groundmemorysensor.cpp  groundmemorysensor.h  groundsensor.cpp  groundsensor.h  lightsensor.cpp  proximitysensorpolynomial.h  redbatterysensor.cpp
(+67 files in other folders)
